--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="Estilos/estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRIMER PROYECTO</title>
 </head>
 <body>
-    <h1>TITULO DEL BLOGPOST</h1>
+    <div id="Container">
+    <h1 id="Container-Titulo">TITULO DEL BLOGPOST</h1>
     <p>Hola soy Fabian, creacion del primer post </p>
+    </div>
 </body>
 </html>
