--- a/blogpost.html
+++ b/blogpost.html
@@ -9,5 +9,6 @@
 <body>
     <h1>TITULO DEL BLOGPOST</h1>
     <p>Hola soy Fabian, creacion del primer post </p>
+    <p id="footer"> INVITA A MAS PERSONAS A LOS MINICURSOS</p>
 </body>
 </html>
