correccion de errores

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,17 +10,17 @@
     <div id="Container">
         <div id="cabecera">
             
-    <h1 id="Container-Titulo"> <img id="logo" src="imagenes/logo.jpg">TITULO DEL BLOGPOST
+    <h1 id="Container-Titulo"> <img src="logo.jpg"> TITULO DEL BLOGPOST
     <span> tu blog de confianza</span></h1>
     </div>
+
     <div id="post"></div>
     <p>Hola soy Fabian, creacion del primer post </p>
 
-
+    <p id="footer"> INVITA A MAS PERSONAS A LOS MINICURSOS</p>
     </div>
    
-=======
-    <p id="footer"> INVITA A MAS PERSONAS A LOS MINICURSOS</p>
->>>>>>> master
+
+
 </body>
 </html>
