--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="Container">
         <div id="cabecera">
             
-    <h1 id="Container-Titulo"> <img src="logo.jpg"> TITULO DEL BLOGPOST
+    <h1 id="Container-Titulo"> <img id="logo" src="imagenes/incognito.jpg"> TITULO DEL BLOGPOST
     <span> tu blog de confianza</span></h1>
     </div>
 
